# graphs-task

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
graphs/: __init__.py  __main__.py  base.py  building_tree.py  utils.py
graphs/commands/: building_tree.py  main.py  utils.py
test-graphs/: 2.txt
