[tool.poetry]
name = "graphs"
version = "0.1.0"
description = "This package represents task of subject `Graphs and algorithms`. Task is implementation algorithm which builds tree from graph basing on DFS algorithm"
authors = ["KlasiFate <klasifate@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^23.11.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
